@@ -4771,6 +4771,11 @@ use feature 'say';
                                 Perlito5::Grammar::Scope::end_compile_time_scope();
                                 return $m
                             }
+                            sub Perlito5::Grammar::Block::eval_end_block {
+                                local ${'@'};
+                                my $code = 'package ' . $Perlito5::PKG_NAME . ';' . chr(10) . 'sub ' . $_[0] . chr(10);
+                                eval(Perlito5::CompileTime::Dumper::generate_eval_string($code)) or die('Error in BEGIN block: ' . ${'@'})
+                            }
                             sub Perlito5::Grammar::Block::eval_begin_block {
                                 local ${'@'};
                                 my $code = 'package ' . $Perlito5::PKG_NAME . ';' . chr(10) . $_[0];
@@ -4858,7 +4863,11 @@ use feature 'say';
                                 my $compile_block = $Perlito5::SCOPE->{'block'}->[-1];
                                 $compile_block->{'type'} = 'sub';
                                 $compile_block->{'name'} = $block_name;
-                                if ($block_name eq 'BEGIN') {
+                                if ($block_name eq 'END') {
+                                    unshift(@Perlito5::END_BLOCK, eval_end_block(substr($str, $block_start, $m->{'to'} - $block_start)));
+                                    $m->{'capture'} = Perlito5::AST::Apply::->new('code' => 'undef', 'namespace' => '', 'arguments' => [])
+                                }
+                                elsif ($block_name eq 'BEGIN') {
                                     local $Perlito5::PHASE = 'BEGIN';
                                     eval_begin_block(substr($str, $block_start, $m->{'to'} - $block_start));
                                     $m->{'capture'} = Perlito5::AST::Apply::->new('code' => 'undef', 'namespace' => '', 'arguments' => [])
@@ -7585,6 +7594,7 @@ use feature 'say';
                     our $SCOPE = $BASE_SCOPE;
                     our $SCOPE_DEPTH = 0;
                     our @SCOPE_STMT = ();
+                    our @END_BLOCK = ();
                     our $ID = 100;
                     our $PACKAGES = {'STDERR' => 1, 'STDOUT' => 1, 'STDIN' => 1, 'main' => 1, 'strict' => 1, 'warnings' => 1, 'utf8' => 1, 'bytes' => 1, 'encoding' => 1, 'UNIVERSAL' => 1, 'CORE' => 1, 'CORE::GLOBAL' => 1, 'Perlito5::IO' => 1};
                     push(@INC, $_)
@@ -17570,9 +17580,11 @@ use feature 'say';
             local ${'@'};
             my $init = join('; ', @Use);
             eval('  package main;' . chr(10) . '                ' . $init . ';' . chr(10) . '                ' . $source . ';' . chr(10) . '                $@ = undef' . chr(10) . '            ');
-            if (${'@'}) {
-                my $error = ${'@'};
-                warn($error);
+            my $error = ${'@'};
+            $error && warn($error);
+            $_->()
+                for @Perlito5::END_BLOCK;
+            if ($error) {
                 exit(255)
             }
         }
