@@ -48,6 +48,22 @@ sub block {
     return $m;
 }
 
+sub eval_end_block {
+    # execute "eval" on this block,
+    # without access to compile-time lexical variables.
+    # compile-time globals are still a problem.
+    local $@;
+    my $code = "package $Perlito5::PKG_NAME;\n"
+             . "sub $_[0]\n";
+    # say "END block: $code";
+
+    # eval-string inside BEGIN block
+    # we add some extra information to the data, to make things more "dumpable"
+    eval Perlito5::CompileTime::Dumper::generate_eval_string( $code )
+    # eval "{ $code }; 1"
+    or die "Error in BEGIN block: " . $@;
+}
+
 sub eval_begin_block {
     # execute "eval" on this block,
     # without access to compile-time lexical variables.
@@ -130,7 +146,18 @@ sub special_named_block {
     $compile_block->{type} = 'sub';
     $compile_block->{name} = $block_name;
   
-    if ($block_name eq 'BEGIN') {
+    if ($block_name eq 'END') {
+        # say "END $block_start ", $m->{to}, "[", substr($str, $block_start, $m->{to} - $block_start), "]";
+        # local $Perlito5::PHASE = 'END';
+        unshift @Perlito5::END_BLOCK, eval_end_block( substr($str, $block_start, $m->{to} - $block_start) );
+        $m->{capture} = 
+            Perlito5::AST::Apply->new(
+                code => 'undef',
+                namespace => '',
+                arguments => []
+            );
+    }
+    elsif ($block_name eq 'BEGIN') {
         # say "BEGIN $block_start ", $m->{to}, "[", substr($str, $block_start, $m->{to} - $block_start), "]";
         # local $Perlito5::PKG_NAME = $Perlito5::PKG_NAME;  # BUG - this doesn't work
         local $Perlito5::PHASE = 'BEGIN';
